--- a/app/src/main/res/layout/fragment_current_task.xml
+++ b/app/src/main/res/layout/fragment_current_task.xml
@@ -4,10 +4,13 @@
     android:layout_height="match_parent"
     tools:context=".fragment.CurrentTaskFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvCurrentTasks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:scrollbars="vertical"
+        android:clipToPadding="false"
+        android:padding="88dp">
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
