--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
             android:id="@+id/pager"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="112dp">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            />
 
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/app_bar_layout"
@@ -27,7 +28,8 @@
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize">
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_scrollFlags="scroll|enterAlways"/>
 
                     <android.support.design.widget.TabLayout
                         android:id="@+id/tab_layout"
@@ -35,13 +37,11 @@
                         android:layout_height="?attr/actionBarSize"
                         app:tabIndicatorColor="@android:color/background_light"
                         app:tabSelectedTextColor="@android:color/background_light"
-                        app:tabTextColor="@android:color/background_light">
+                        app:tabTextColor="@android:color/background_light"
+                        app:layout_scrollFlags="scroll|enterAlways"/>
 
-                    </android.support.design.widget.TabLayout>
 
-                </android.support.v7.widget.Toolbar>
             </android.support.design.widget.AppBarLayout>
-        </android.support.v4.view.ViewPager>
 
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
