--- a/app/src/main/res/layout/model_task.xml
+++ b/app/src/main/res/layout/model_task.xml
@@ -6,7 +6,7 @@
     android:background="?android:attr/selectableItemBackground">
 
     <TextView
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvTaskTitle"
         android:textSize="16sp"
@@ -14,7 +14,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/tvTaskDate"
-        android:text="Title"/>
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/tvTaskDate"
+        android:layout_toStartOf="@+id/tvTaskDate" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,11 +25,8 @@
         android:gravity="right"
         android:textSize="14sp"
         android:textColor="@color/secondary_text_default_material_light"
-        android:text="Date"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="19dp"
-        android:layout_margin="16dp"
-        />
+        android:layout_margin="16dp"/>
 
 
 
